# kafka-rs

./: Cargo.toml
src/: lib.rs
src/client/: api_version.rs  mod.rs
src/errors/: mod.rs
src/producer/: mod.rs
src/serde/: mod.rs  request.rs  response.rs
