[package]
name = "async-kafka"
version = "0.1.0"
authors = ["Shem Sedrick <ssedrick1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async-tokio = ["tokio"]

[dependencies]
nom = "6"
serde = "1"

[dependencies.tokio]
version = "1"
optional = true

